--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,17 @@
 .my_image{
-  height: 50px;
-  width: 400px;
+  height: 300px;
+  width: 250px;
+}
+
+h1{
+  color: red
+}
+
+body{
+  background-color: gold
+}
+
+a:hover{
+  border-color: black;
+  border-radius: 50%;
 }
