--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,34 @@
-.my_image{
-  height: 300px;
-  width: 250px;
+.animal_rankings {
+  height: 50px;
+  width: 120px;
+  border-color: #027ebc;
+  background-color: #00aeef;
+  border-style: solid;
+  border-width: 2px;
+  border-radius: 5px;
+  margin: auto;
+  text-align: center;
+}
+
+.You {
+  height: 50px;
+  width: 120px;
+  border-color: #027ebc;
+  background-color: #00aeef;
+  border-style: solid;
+  border-width: 2px;
+  border-radius: 5px;
+  margin: auto;
+  text-align: center;
 }
 
 h1{
-  color: red
+  color: red;
+  font-family: Hawaii 5-0, sans-serif;
 }
 
 body{
-  background-color: gold
+  background-color: #315402;
 }
 
 a:hover{
