--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,42 @@
 .music {
   height: 50px;
   width: 120px;
-  border-color: #027ebc;
-  background-color: #00aeef;
-  border-style: solid;
-  border-width: 2px;
   border-radius: 5px;
-  margin: auto;
+  box-shadow: 0px 13px 10px -10px rgba(0,0,0,0.3);
+  padding: 15px 25px;
+  background-color: #027ebc;
+  color: #00aeef;
+  font-family: "PT Sans", Arial, Helvetica, sans-serif;
+  text-decoration: none;
+  font-size: 18px;
   text-align: center;
 }
 
 .art {
   height: 50px;
   width: 120px;
-  border-color: #027ebc;
-  background-color: #00aeef;
-  border-style: solid;
-  border-width: 2px;
   border-radius: 5px;
-  margin: auto;
+  box-shadow: 0px 13px 10px -10px rgba(0,0,0,0.3);
+  padding: 15px 25px;
+  background-color: #027ebc;
+  color: #00aeef;
+  font-family: "PT Sans", Arial, Helvetica, sans-serif;
+  text-decoration: none;
+  font-size: 18px;
+  text-align: center;
+}
+
+.events {
+  height: 50px;
+  width: 120px;
+  border-radius: 5px;
+  box-shadow: 0px 13px 10px -10px rgba(0,0,0,0.3);
+  padding: 15px 25px;
+  background-color: #027ebc;
+  color: #00aeef;
+  font-family: "PT Sans", Arial, Helvetica, sans-serif;
+  text-decoration: none;
+  font-size: 18px;
   text-align: center;
 }
 
